@@ -55,5 +55,9 @@ void normalize_timespec(struct timespec *ts);
 void start_cpu_timing(struct timespec *start_time);
 
 /* add difference between start_time and the current CPU time to add_to, return elapsed time */
-int64_t end_cpu_timing (const struct timespec *start_time, struct timespec *add_to);
+int64_t end_cpu_timing(const struct timespec *start_time, struct timespec *add_to);
+
+/* set current thread name, if supported */
+void set_thread_name(const char *name);
+
 #endif
